Finished landing-page header HTML and CSS

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <!-- Page div -->
-    <div class="page">
+    <div id="page">
 
         <!-- Header div -->
-        <div class="header">
+        <div id="header">
             <div class="header-logo">
-                Logo
+                Header Logo
             </div>
             <ul class="header-links">
                 <li>header link one</li>
