--- a/index.html
+++ b/index.html
@@ -24,27 +24,42 @@
         </div>
 
         <!-- Top div -->
-        <div class="top">
-            Top
+        <div id="top">
+            <div class="top-content">
+                <p>
+                    This website is awesome
+                </p>
+                <p>
+                    This website has some subtext that 
+                    goes here under the main title. It's a smaller 
+                    font and the color is lower contrast 
+                </p>
+                <button>
+                    Sign up
+                </button>
+            </div>
+            <div class="top-image">
+                This is a placeholder for an image
+            </div>
         </div>
 
         <!-- Info div -->
-        <div class="information">
+        <div id="information">
             Information
         </div>
 
         <!-- Quote div -->
-        <div class="Quote">
+        <div id="Quote">
             Quote
         </div>
 
         <!-- Call div -->
-        <div class="call">
+        <div id="call">
             Call
         </div>
 
         <!-- Footer div -->
-        <div class="footer">
+        <div id="footer">
             Footer
         </div>
     </div>
