--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <!-- Top div -->
         <div id="top">
             <div class="top-content">
-                <p>
+                <p class="main-text">
                     This website is awesome
                 </p>
-                <p>
+                <p class="secondary-text">
                     This website has some subtext that 
                     goes here under the main title. It's a smaller 
                     font and the color is lower contrast 
