Completed HTML and styling for information section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,43 @@
 
         <!-- Info div -->
         <div id="information">
-            Information
+            <p class="info-header">
+                Some random information.
+            </p>
+            <div class="info-blocks">
+                <div class="info-block">
+                    <div class="info-image"> 
+                    </div>
+                    <p class="block-text">
+                        this is some subtext under an 
+                        illustration or image
+                    </p>
+                </div>
+                <div class="info-block">
+                    <div class="info-image"> 
+                    </div>
+                    <p class="block-text">
+                        this is some subtext under an 
+                        illustration or image
+                    </p>
+                </div>
+                <div class="info-block">
+                    <div class="info-image"> 
+                    </div>
+                    <p class="block-text">
+                        this is some subtext under an 
+                        illustration or image
+                    </p>
+                </div>
+                <div class="info-block">
+                    <div class="info-image"> 
+                    </div>
+                    <p class="block-text">
+                        this is some subtext under an 
+                        illustration or image
+                    </p>
+                </div>
+            </div>
         </div>
 
         <!-- Quote div -->
