--- a/index.html
+++ b/index.html
@@ -86,7 +86,14 @@
 
         <!-- Quote div -->
         <div id="Quote">
-            Quote
+            <p class="quote-body">
+                This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually
+                read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="quoted-person">
+                -Thor, God of Thunder
+            </p>
         </div>
 
         <!-- Call div -->
