Finished Quote section HTML and CSS

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <!-- Quote div -->
-        <div id="Quote">
+        <div id="quote">
             <p class="quote-body">
                 This is an inspiring quote, or a testimonial from a customer.
                 Maybe it's just filling up space, or maybe people will actually
