Finished HTML for call section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
 
         <!-- Call div -->
         <div id="call">
-            Call
+            <div class="call-box">
+                <p>Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+                <button>Sign up</button>
+            </div>
         </div>
 
         <!-- Footer div -->
