Touched up call section HTML

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
         <!-- Call div -->
         <div id="call">
             <div class="call-box">
-                <p>Call to action! It's time!</p>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button>Sign up</button>
+                <div class="call-text">
+                    <p class="call-header">Call to action! It's time!</p>
+                    <p class="call-text">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="call-button">Sign up</button>
             </div>
         </div>
 
