--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                     <p class="call-header">Call to action! It's time!</p>
                     <p class="call-text">Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button class="call-button">Sign up</button>
+                <div class="button-container">
+                    <button class="call-button">Sign up</button>
+                </div>     
             </div>
         </div>
 
