Finished HTML for footer section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <!-- Footer div -->
         <div id="footer">
-            Footer
+            Copyright &copy; The Odin Project 2021
         </div>
     </div>
 </body>
